--- a/backend/requirements.txt
+++ b/backend/requirements.txt
@@ -4,6 +4,7 @@ django-cors-headers==4.9.0
 djangorestframework==3.16.1
 djangorestframework_simplejwt==5.5.1
 drf-yasg==1.21.12
+gunicorn==23.0.0
 inflection==0.5.1
 mysql-connector-python==9.5.0
 packaging==25.0
